--- a/app/composer.json
+++ b/app/composer.json
@@ -14,7 +14,9 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
         "symfony/inflector": "5.1.*",
-        "symfony/yaml": "5.1.*"
+        "symfony/twig-bundle": "5.1.*",
+        "symfony/yaml": "5.1.*",
+        "twig/twig": "^3"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.20"
