--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -5,9 +5,10 @@ RUN apt-get update && apt-get install -y zlib1g-dev g++ git libicu-dev zip libzi
     && pecl install apcu \
     && docker-php-ext-enable apcu \
     && docker-php-ext-configure zip \
-    && docker-php-ext-install zip
+    && docker-php-ext-install zip \
+    && pecl install xdebug && docker-php-ext-enable xdebug
 
-WORKDIR /var/www/project
+WORKDIR /var/www/sf
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
